2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/network.c (verify_peer_certificate): If the peer
	did not send a certificate, treat it as valid.

2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/network.c (OVAS_CONNECTION_FROM_FD): New. Macro to
	determine the nessus_connection* given a nessus file descriptor
	(nessus_register_connection, ovas_allocate_connection): Most of
	nessus_register_connection is now in the new function
	ovas_allocate_connection.
	(set_gnutls_priorities): New.  Frontend for the other set_gnutls_*
	functions.
	(verify_peer_certificate): New.  Function to verify the peer
	certificate
	(open_SSL_connection): Use set_gnutls_priorities.
	(ovas_server_context_new): New.  Function to allocate an
	ovas_server_context_t
	(ovas_server_context_free): New.  Function to free an
	ovas_server_context_t
	(ovas_server_context_attach): New.  Functin to set up SSL/TLS on a
	socket with parameters from a ovas_server_context_t 

	* include/libopenvas.h: Add declarations for the new functions and
	types.  Always declare nessus_SSL_init.

2007-06-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libhosts_gatherer/hg_add_hosts.c: Backported patch from original
	nessus-libraries branch NESSUS_2_2 as committed by Renaud Deraison
	June, 25 2007. Original commit message there: "bugfix".

2007-06-22  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/network.c (nessus_SSL_password_cb): Removed because
	it's not used anymore.

2007-06-22  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/network.c (nessus_SSL_init): Handle errors.

2007-06-22  Bernhard Herzog  <bh@intevation.de>

	* libopenvas-config.pre.in: remove the @pcap_flag@ substitution
	from the --libs output.  The pcap options are now in EXTRA anyway
	and @pcap_flag@ is no longer substituted.

2007-06-21  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Removed local copy of pcap library.

	* configure.in, Makefile, libopenvas-config.pre.in: